# mathematical-constants-calculator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
constants/: apery.cpp  constants.h  e.cpp  gamma.cpp  phi.cpp  pi.cpp  sqrt.cpp
